Okhrana mechanic expansion

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1181,6 +1181,18 @@
   PB_RUS_Okhrana:0 "The Second Time of Troubles"
   PB_RUS_Okhrana_desc:0 "\n\n\n\n\n\nThe so-called §YFirst National Awakening§! ended in the defeat of the nationalist forces, yet for many the wars of independence never ended. Across the Ukraine, Poland, the Baltics, and Finland nationalist forces continue to struggle against Russian rule. Combating this is the §YDepartment for Protecting the Public Security and Order§!, colloquially known as the §YOkhrana§! or Guard Department. Previously just the state security apparatus of the Empire, the Okhrana was expanded dramatically following the Nationalist Rebellions to combat the remnant rebel forces.\n\nThe Okhrana is reliant on resources provided §Ymonthly§!; these resources must be used carefully to target and eliminate key figures in the secessionist movements to reduce their power. Additional §Ymonthly resources§! can be acquired by expanding Okhrana operations centers; however, these will require a large initial investment before becoming operational.\n\nOur goal is the §rdecapitation§! of rebel leadership, however eliminating leaders of rebel factions may drive them in different ideological directions and lead to other figures assuming command of the movement. A rebel group is §Yonly§! fully defeated once §Yall§! the most noteworthy members of their leadership are liquidated.\n\nIf the Okhrana fails to control the power of a rebel group, there may be §rdrastic§! consequences if they perceive us to be weak or distracted.\n\nCurrently, the Okhrana has access to £RUS_Okhrana_Resources §G[?RUS.RUS_Okhrana_Resources]§! (§G+[?RUS.RUS_Okhrana_Monthly_Resources]§!) resources\n\n§YPolish Resistance Power:§! [?RUS.RUS_Polish_Resistance_Power]%\n§YUkrainian Resistance Power:§! [?RUS.RUS_Ukraine_Resistance_Power]%\n§YBaltic Resistance Power:§! [?RUS.RUS_Baltic_Resistance_Power]%\n§YFinnish Resistance Power:§! [?RUS.RUS_Finnish_Resistance_Power]%\n\n\n\n\n\n\n\n\n\n\n\n\n"
 
+  RUS_Okhrana_Poland_Intel_tt: "Current §CIntel§! on §YPolish Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okrhana_Intel_Poland]§!"
+  RUS_Okhrana_Ukraine_Intel_tt: "Current §CIntel§! on §YUkrainian Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okrhana_Intel_Ukraine]§!"
+  RUS_Okhrana_Baltic_Intel_tt: "Current §CIntel§! on §YBaltic Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okrhana_Intel_Baltic]§!"
+  RUS_Okhrana_Finland_Intel_tt: "Current §CIntel§! on §YFinnish Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okrhana_Intel_Finland]§!"
+
+  RUS_Okhrana_Poland_Leader_Hunt_tt: "[get_pol_leader_hunt_text]"
+  RUS_Okhrana_Ukraine_Leader_Hunt_tt: "[get_ukr_leader_hunt_text]"
+  RUS_Okhrana_Baltic_Leader_Hunt_tt: "[get_bal_leader_hunt_text]"
+  RUS_Okhrana_Finland_Leader_Hunt_tt: "[get_fin_leader_hunt_text]"
+  RUS_Okhrana_Cant_Hunt_Leader: "You §Rcan't§! carry out the operation to §YHunt Down the Resistance Leader§! because you do not have sufficient resources:"
+  RUS_Okhrana_Can_Hunt_Leader: "You §Gcan§! carry out the operation to §YHunt Down the Resistance Leader§!. It will cost:"
+
   PB_Okhrana_Timed_Decision:0 "Anti-Russian Agitation"
   PB_Okhrana_Timed_Decision2:0 "Anti-Russian Insurgency Attack"
   PB_Okhrana_Timed_Decision3:0 "Monthly Okhrana Funding Arrives"
