--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -55,6 +55,9 @@
   AME_Imperial_Civil_War_Ceasfire:0 "Imperial Civil War Ceasefire"
   AME_Imperial_Civil_War_Ceasfire_desc:0 "With the largest loyalist cities in North America secured and barely any British presence left on the continent fighting has largely ended. Now peace talks begin where London needs to realize the reality on the ground..."
 
+  AME_Imperial_Civil_War_Ceasfire_English:0 "Imperial Civil War Ceasefire"
+  AME_Imperial_Civil_War_Ceasfire_English_desc:0 "With the largest loyalist cities in North America secured and barely any British presence left on the continent fighting has largely ended. Now peace talks are ongoing and everyday we realize more and more that North America is lost unless a miracle happens..."
+
   Imp_War_AME_Ceasefire_Complete_One:0 "The §YImperial Civil War§! continues..."
 
   AME_Cost_Reduction_Ireland_Special:0 "£decision_icon_small §YDecision Cost§! of All Aligned Decisions in the Balance of Power will be §Greduced§!"
