more okhrana stuff

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1179,27 +1179,48 @@
   # Decisions
   ##########################
   PB_RUS_Okhrana:0 "The Second Time of Troubles"
-  PB_RUS_Okhrana_desc:0 "\n\n\n\n\n\nThe so-called §YFirst National Awakening§! ended in the defeat of the nationalist forces, yet for many the wars of independence never ended. Across the Ukraine, Poland, the Baltics, and Finland nationalist forces continue to struggle against Russian rule. Combating this is the §YDepartment for Protecting the Public Security and Order§!, colloquially known as the §YOkhrana§! or Guard Department. Previously just the state security apparatus of the Empire, the Okhrana was expanded dramatically following the Nationalist Rebellions to combat the remnant rebel forces.\n\nThe Okhrana is reliant on resources provided §Ymonthly§!; these resources must be used carefully to target and eliminate key figures in the secessionist movements to reduce their power. Additional §Ymonthly resources§! can be acquired by expanding Okhrana operations centers; however, these will require a large initial investment before becoming operational.\n\nOur goal is the §rdecapitation§! of rebel leadership, however eliminating leaders of rebel factions may drive them in different ideological directions and lead to other figures assuming command of the movement. A rebel group is §Yonly§! fully defeated once §Yall§! the most noteworthy members of their leadership are liquidated.\n\nIf the Okhrana fails to control the power of a rebel group, there may be §rdrastic§! consequences if they perceive us to be weak or distracted.\n\nCurrently, the Okhrana has access to £RUS_Okhrana_Resources §G[?RUS.RUS_Okhrana_Resources]§! (§G+[?RUS.RUS_Okhrana_Monthly_Resources]§!) resources\n\n§YPolish Resistance Power:§! [?RUS.RUS_Polish_Resistance_Power]%\n§YUkrainian Resistance Power:§! [?RUS.RUS_Ukraine_Resistance_Power]%\n§YBaltic Resistance Power:§! [?RUS.RUS_Baltic_Resistance_Power]%\n§YFinnish Resistance Power:§! [?RUS.RUS_Finnish_Resistance_Power]%\n\n\n\n\n\n\n\n\n\n\n\n\n"
+  PB_RUS_Okhrana_desc:0 "\n\n\n\n\n\nThe so-called §YFirst National Awakening§! ended in the defeat of the nationalist forces, yet for many the wars of independence never ended. Across the Ukraine, Poland, the Baltics, and Finland nationalist forces continue to struggle against Russian rule. Combating this is the §YDepartment for Protecting the Public Security and Order§!, colloquially known as the §YOkhrana§! or Guard Department. Previously just the state security apparatus of the Empire, the Okhrana was expanded dramatically following the Nationalist Rebellions to combat the remnant rebel forces.\n\nThe Okhrana is reliant on resources provided §Ymonthly§! and by gathering §Cintel§!; these resources must be used carefully to target and eliminate key figures in the secessionist movements to reduce their power. Additional §Ymonthly resources§! can be acquired by expanding Okhrana operations centers; however these will require a large initial investment before becoming operational.\n\nOur goal is the §rdecapitation§! of rebel leadership, however eliminating leaders of rebel factions may drive them in different ideological directions and lead to other figures assuming command of the movement. A rebel group is §Yonly§! fully defeated once §Yall§! the most noteworthy members of their leadership are liquidated.\n\nIf the Okhrana fails to control the power of a rebel group, there may be §rdrastic§! consequences if they perceive us to be weak or distracted.\n\nCurrently, the Okhrana has access to £RUS_Okhrana_Resources §G[?RUS.RUS_Okhrana_Resources]§! (§G+[?RUS.RUS_Okhrana_Monthly_Resources]§!) resources\n\n§YPolish Resistance Power:§! [?RUS.RUS_Polish_Resistance_Power]%\n§YUkrainian Resistance Power:§! [?RUS.RUS_Ukraine_Resistance_Power]%\n§YBaltic Resistance Power:§! [?RUS.RUS_Baltic_Resistance_Power]%\n§YFinnish Resistance Power:§! [?RUS.RUS_Finnish_Resistance_Power]%\n\n\n\n\n\n\n\n\n\n\n\n\n"
 
-  RUS_Okhrana_Poland_Intel_tt: "Current §CIntel§! on §YPolish Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okrhana_Intel_Poland]§!"
-  RUS_Okhrana_Ukraine_Intel_tt: "Current §CIntel§! on §YUkrainian Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okrhana_Intel_Ukraine]§!"
-  RUS_Okhrana_Baltic_Intel_tt: "Current §CIntel§! on §YBaltic Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okrhana_Intel_Baltic]§!"
-  RUS_Okhrana_Finland_Intel_tt: "Current §CIntel§! on §YFinnish Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okrhana_Intel_Finland]§!"
+  RUS_Okhrana_Poland_Intel_tt: "Current §CIntel§! on §YPolish Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okhrana_Intel_Poland]§!"
+  RUS_Okhrana_Ukraine_Intel_tt: "Current §CIntel§! on §YUkrainian Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okhrana_Intel_Ukraine]§!"
+  RUS_Okhrana_Baltic_Intel_tt: "Current §CIntel§! on §YBaltic Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okhrana_Intel_Baltic]§!"
+  RUS_Okhrana_Finland_Intel_tt: "Current §CIntel§! on §YFinnish Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okhrana_Intel_Finland]§!"
 
   RUS_Okhrana_Poland_Leader_Hunt_tt: "[get_pol_leader_hunt_text]"
   RUS_Okhrana_Ukraine_Leader_Hunt_tt: "[get_ukr_leader_hunt_text]"
   RUS_Okhrana_Baltic_Leader_Hunt_tt: "[get_bal_leader_hunt_text]"
   RUS_Okhrana_Finland_Leader_Hunt_tt: "[get_fin_leader_hunt_text]"
-  RUS_Okhrana_Cant_Hunt_Leader: "You §Rcan't§! carry out the operation to §YHunt Down the Resistance Leader§! because you do not have sufficient resources:"
-  RUS_Okhrana_Can_Hunt_Leader: "You §Gcan§! carry out the operation to §YHunt Down the Resistance Leader§!. It will cost:"
+  RUS_Okhrana_Cant_Hunt_Leader: "You §Rcan't§! carry out the operation to §YHunt Down the Resistance Leader§! because you do not have sufficient resources:\n £RUS_Okhrana_Resources §G50 Okhrana Resources§!\n£RUS_Okhrana_Intel §C50 Intel§!"
+  RUS_Okhrana_Can_Hunt_Leader: "You §Gcan§! carry out the operation to §YHunt Down the Resistance Leader§!. It will cost:\n £RUS_Okhrana_Resources §G50 Okhrana Resources§!\n£RUS_Okhrana_Intel §C50 Intel§!"
+
+  PB_Okhrana_Reduce_Resistance_Poland: "Reduce Polish Resistance"
+  PB_Okhrana_Reduce_Resistance_Ukraine: "Reduce Ukrainian Resistance"
+  PB_Okhrana_Reduce_Resistance_Baltic: "Reduce Baltic Resistance"
+  PB_Okhrana_Reduce_Resistance_Finland: "Reduce Finnish Resistance"
+  PB_Okhrana_Gather_Intel_Poland: "Gather intel on Polish Resistance"
+  PB_Okhrana_Gather_Intel_Ukraine: "Gather intel on Ukrainian Resistance"
+  PB_Okhrana_Gather_Intel_Baltic: "Gather intel on Baltic Resistance"
+  PB_Okhrana_Gather_Intel_Finland: "Gather intel on Finnish Resistance"
+
+ RUS_Okhrana_Intel_Gain_0_tt: "We will gain §RNo Intel§!"
+ RUS_Okhrana_Intel_Gain_2_tt: "We will gain £RUS_Okhrana_Intel §C2 Intel§!"
+ RUS_Okhrana_Intel_Gain_3_tt: "We will gain £RUS_Okhrana_Intel §C3 Intel§!"
+ RUS_Okhrana_Intel_Gain_5_tt: "We will gain £RUS_Okhrana_Intel §C5 Intel§!"
+ RUS_Okhrana_Intel_Gain_10_tt: "We will gain £RUS_Okhrana_Intel §C10 Intel§!"
+ RUS_Okhrana_Intel_Gain_15_tt: "We will gain £RUS_Okhrana_Intel §C15 Intel§!"
+
+ RUS_Okhrana_Intel_requirment_tt: "We have at least £RUS_Okhrana_Resources §G5§! Okhrana Resources, but better rewards are available when we have at least £RUS_Okhrana_Resources §G10§! and £RUS_Okhrana_Resources §G25§! Okhrana Resources"
 
   PB_Okhrana_Timed_Decision:0 "Anti-Russian Agitation"
   PB_Okhrana_Timed_Decision2:0 "Anti-Russian Insurgency Attack"
   PB_Okhrana_Timed_Decision3:0 "Monthly Okhrana Funding Arrives"
 
-  RUS_Okhrana_Resources_Twenty_tt:0 "We have more than £RUS_Okhrana_Resources §G20§! Okhrana Resources"
-  RUS_Okhrana_Resources_Forty_tt:0 "We have more than £RUS_Okhrana_Resources §G40§! Okhrana Resources"
-  RUS_Okhrana_Resources_Sixty_tt:0 "We have more than £RUS_Okhrana_Resources §G60§! Okhrana Resources"
+  RUS_Okhrana_Resources_Twenty_tt:0 "We have at least £RUS_Okhrana_Resources §G20§! Okhrana Resources"
+  RUS_Okhrana_Resources_Thirty_Five_tt:0 "We have at least £RUS_Okhrana_Resources §G35§! Okhrana Resources"
+  RUS_Okhrana_Resources_Forty_tt:0 "We have at least £RUS_Okhrana_Resources §G40§! Okhrana Resources"
+  RUS_Okhrana_Resources_Sixty_tt:0 "We have at least £RUS_Okhrana_Resources §G60§! Okhrana Resources"
+
+ RUS_Okhrana_has_more_than_0_resistance_tt: "Has more than §Y0 Resistance§!"
 
   PB_RUS_Okhrana_Resource_Monthly_Increase_tt:0 "£RUS_Okhrana_Resources §YOkhrana Monthly Resource§! Gain will §Gincrease§! by §G5§! "
 
@@ -1341,23 +1362,31 @@
   PB_RUS_Okhrana_Resource_Expense_Large_tt:0 "£Generic_Red_Arrow_Down £RUS_Okhrana_Resources §R-60 Okhrana Resources§!"
 
   PB_RUS_Increase_Polish_Resistance_tt:0 "§YPolish Resistance Power§! will §Rincrease§! by §Y10%§!"
+  PB_RUS_Increase_Polish_Resistance_Medium_tt:0 "§YPolish Resistance Power§! will §Rincrease§! by §Y15%§!"
   PB_RUS_Increase_Polish_Resistance_Large_tt:0 "§YPolish Resistance Power§! will §Rincrease§! by §Y20%§!"
   PB_RUS_Decrease_Polish_Resistance_tt:0 "§YPolish Resistance Power§! will §Gdecrease§! by §Y10%§!"
+  PB_RUS_Decrease_Polish_Resistance_Medium_tt:0 "§YPolish Resistance Power§! will §Gdecrease§! by §Y15%§!"
   PB_RUS_Decrease_Polish_Resistance_Large_tt:0 "§YPolish Resistance Power§! will §Gdecrease§! by §Y20%§!"
 
   PB_RUS_Increase_Baltic_Resistance_tt:0 "§YBaltic Resistance Power§! will §Rincrease§! by §Y10%§!"
+  PB_RUS_Increase_Baltic_Resistance_Medium_tt:0 "§YBaltic Resistance Power§! will §Rincrease§! by §Y15%§!"
   PB_RUS_Increase_Baltic_Resistance_Large_tt:0 "§YBaltic Resistance Power§! will §Rincrease§! by §Y20%§!"
   PB_RUS_Decrease_Baltic_Resistance_tt:0 "§YBaltic Resistance Power§! will §Gdecrease§! by §Y10%§!"
+  PB_RUS_Decrease_Baltic_Resistance_Medium_tt:0 "§YBaltic Resistance Power§! will §Gdecrease§! by §Y15%§!"
   PB_RUS_Decrease_Baltic_Resistance_Large_tt:0 "§YBaltic Resistance Power§! will §Gdecrease§! by §Y20%§!"
 
   PB_RUS_Increase_Ukrainian_Resistance_tt:0 "§YUkrainian Resistance Power§! will §Rincrease§! by §Y10%§!"
+  PB_RUS_Increase_Ukrainian_Resistance_Medium_tt:0 "§YUkrainian Resistance Power§! will §Rincrease§! by §Y15%§!"
   PB_RUS_Increase_Ukrainian_Resistance_Large_tt:0 "§YUkrainian Resistance Power§! will §Rincrease§! by §Y20%§!"
   PB_RUS_Decrease_Ukrainian_Resistance_tt:0 "§YUkrainian Resistance Power§! will §Gdecrease§! by §Y10%§!"
+  PB_RUS_Decrease_Ukrainian_Resistance_Medium_tt:0 "§YUkrainian Resistance Power§! will §Gdecrease§! by §Y15%§!"
   PB_RUS_Decrease_Ukrainian_Resistance_Large_tt:0 "§YUkrainian Resistance Power§! will §Gdecrease§! by §Y20%§!"
 
   PB_RUS_Increase_Finnish_Resistance_tt:0 "§YFinnish Resistance Power§! will §Rincrease§! by §Y10%§!"
+  PB_RUS_Increase_Finnish_Resistance_Medium_tt:0 "§YFinnish Resistance Power§! will §Rincrease§! by §Y15%§!"
   PB_RUS_Increase_Finnish_Resistance_Large_tt:0 "§YFinnish Resistance Power§! will §Rincrease§! by §Y20%§!"
   PB_RUS_Decrease_Finnish_Resistance_tt:0 "§YFinnish Resistance Power§! will §Gdecrease§! by §Y10%§!"
+  PB_RUS_Decrease_Finnish_Resistance_Medium_tt:0 "§YFinnish Resistance Power§! will §Gdecrease§! by §Y15%§!"
   PB_RUS_Decrease_Finnish_Resistance_Large_tt:0 "§YFinnish Resistance Power§! will §Gdecrease§! by §Y20%§!"
 
   PB_RUS_Domestic_Politics:0 "Russian Domestic Politics"
@@ -1841,3 +1870,10 @@
   PB_RUS_decision_cost_Assassinate_Rasputin:0 "£command_power §Y30§!"
   PB_RUS_decision_cost_Assassinate_Rasputin_blocked:0 "£command_power §R30§!"
   PB_RUS_decision_cost_Assassinate_Rasputin_tooltip:0 "It costs £command_power §Y30§! to take the decision"
+  
+  PB_RUS_decision_cost_reduce_resistance: "£RUS_Okhrana_Resources §G20§! £pol_power §Y25§!"
+  PB_RUS_decision_cost_reduce_resistance_blocked: "£RUS_Okhrana_Resources §R20§! £pol_power §R25§!"
+  PB_RUS_decision_cost_reduce_resistance_tooltip: "It costs £RUS_Okhrana_Resources §G20§! and £pol_power §Y25§! to take the decision"
+
+  PB_RUS_decision_cost_5_resource_plus: "£RUS_Okhrana_Resources §G5+§!"
+  PB_RUS_decision_cost_5_resource_plus_blocked: "£RUS_Okhrana_Resources §R5+§!"
