--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -674,7 +674,7 @@ OUTDATED_EQ:1 "Show §Houtdated equipment§!"
  EQUIPMENT_ANTI_TANK:0 "Anti-Tank"
  EQUIPMENT_ROCKET:0 "Rocket"
  EQUIPMENT_FLAME:0 "Flame"
- EQUIPMENT_MISSILE:0 "Guided Missile"
+ EQUIPMENT_MISSILE:0 "Missile/Rocket"
  EQUIPMENT_LAND:0 "Land Equipment"
  EQUIPMENT_NAVAL:0 "Naval Equipment"
  EQUIPMENT_AIR:0 "Air Equipment"
@@ -983,4 +983,207 @@ OUTDATED_EQ:1 "Show §Houtdated equipment§!"
  HOL_EQUIPMENT_VERSION_15:1 "No. 15"
  HOL_EQUIPMENT_VERSION_16:1 "No. 16"
 
+ tank_armor_upgrade:0 "Armor"
+ tank_armor_upgrade_desc:0 "Better armor than your enemies can penetrate is a huge advantage to your divisions but is probably going to slow you down."
+ tank_gun_upgrade:0 "Main Gun"
+ tank_gun_upgrade_desc:0 "It's important to have a gun that keep up with enemy armor strength and can penetrate."
+ tank_aa_upgrade:0 "Anti-Air Armament"
+ tank_aa_upgrade_desc:0 "Ensure that our Anti-Air Armament is able to shoot down the latest planes."
+ tank_at_upgrade:0 "Anti-Tank Armament"
+ tank_at_upgrade_desc:0 "Ensure that our tank destroyers can defeat the latest enemy tanks."
+ tank_art_upgrade:0 "Artillery Armament"
+ tank_art_upgrade_desc:1 "Ensure that our self propelled artillery have massive firepower that will tear through any unarmored enemies."
+ tank_reliability_upgrade:0 "Reliability"
+ tank_reliability_upgrade_desc:1 "Improving reliability leads to less broken down equipment you'll need to replace."
+ mech_cost_upgrade:0 "Production Cost"
+ mech_cost_upgrade_desc:0 "Optimizations to the design and substitution of less important materials allow the vehicle to be built faster, but suffering slightly more defects."
+ tank_engine_upgrade:0 "Engine"
+ tank_engine_upgrade_desc:0 "More mobility give tactical and strategic advantages, as well as allowing more armor without being slowed down significantly."
+ ac_engine_upgrade:0 "Engine"
+ ac_engine_upgrade_desc:0 "More mobility give tactical and strategic advantages, as well as allowing more armor without being slowed down significantly."
+ ship_gun_upgrade:0 "Gun"
+ ship_gun_upgrade_desc:0 "It's important to have a gun that keep up with enemy armor strength and can penetrate."
+ ship_torpedo_upgrade:0 "Torpedo"
+ ship_torpedo_upgrade_desc:0 "A torpedo is a powerful attack launchable by smaller ships once in range with a high chance of critical hits"
+ ship_armor_upgrade:0 "Armor"
+ ship_armor_upgrade_desc:0 "More armor to protect your ship against enemy fire"
+ carrier_armor_upgrade:0 "Armor"
+ carrier_armor_upgrade_desc:0 "More armor to protect your ship against enemy fire"
+ ship_engine_upgrade:0 "Engine"
+ ship_engine_upgrade_desc:0 "A ship with a more powerful engine can control distance to its opponents in battle"
+ ship_reliability_upgrade:0 "Reliability"
+ ship_reliability_upgrade_desc:0 "A ship with high reliability will be less prone to critical hits that can do massive damage to a ship without well thought out construction."
+ ship_anti_air_upgrade:0 "Anti-Air"
+ ship_anti_air_upgrade_desc:0 "More guns putting lead in the air means more enemy planes shot down!"
+ ship_ASW_upgrade:0 "ASW"
+ ship_ASW_upgrade_desc:0 "Anti-Submarine-Warfare weapons are important for locating and taking out submarines."
+ destroyer_engine_upgrade:0 "Engine"
+ destroyer_engine_upgrade_desc:0 "A ship with a more powerful engine can control distance to its opponents in battle"
+ sub_engine_upgrade:0 "Engine"
+ sub_engine_upgrade_desc:0 "A ship with a more powerful engine can control distance to its opponents in battle"
+ sub_stealth_upgrade:0 "Stealth"
+ sub_stealth_upgrade_desc:0 "A submarines greatest strength is its ability to remain undetected and only strike when it has the advantage."
+ sub_torpedo_upgrade:0 "Torpedo"
+ sub_torpedo_upgrade_desc:0 "A torpedo is a powerful attack launchable by smaller ships once in range with a high chance of critical hits"
+ ship_deckspace_upgrade:0 "Deck space"
+ ship_deckspace_upgrade_desc:0 "More room to carry and launch carrier-capable airplanes"
+ plane_gun_upgrade:0 "Weapons"
+ plane_gun_upgrade_desc:0 "Better weapons to fight other planes with"
+ cv_plane_gun_upgrade:0 "Weapons"
+ cv_plane_gun_upgrade_desc:0 "Better weapons to fight other planes with"
+ plane_engine_upgrade:0 "Engine"
+ plane_engine_upgrade_desc:0 "Higher speed gives a plane an advantage when it comes to positioning and target selection. Important for interceptors."
+ plane_range_upgrade:0 "Range"
+ plane_range_upgrade_desc:0 "A plane with better range can reach more strategic areas for missions"
+ cv_plane_range_upgrade:0 "Range"
+ cv_plane_range_upgrade_desc:0 "A plane with better range can reach more strategic areas for missions"
+ plane_reliability_upgrade:0 "Reliability"
+ plane_reliability_upgrade_desc:0 "A plane with low reliability has a chance of accidents during missions"
+ plane_naval_upgrade:0 "Attack"
+ plane_naval_upgrade_desc:0 "More carry capacity of anti-ship weapons."
+ cv_plane_naval_upgrade:0 "Attack"
+ cv_plane_naval_upgrade_desc:0 "More carry capacity of anti-ship weapons."
+ plane_bomb_upgrade:0 "Bombing"
+ plane_bomb_upgrade_desc:0 "Bigger bomb bay to deliver more payload."
+ plane_tac_bomb_upgrade:0 "Bombing"
+ plane_tac_bomb_upgrade_desc:0 "Bigger bomb bay to deliver more payload."
+ plane_cas_upgrade:0 "Attack"
+ plane_cas_upgrade_desc:0 "Improved weapons for attacking ground targets"
+ plane_armor_upgrade:0 "Armor"
+ plane_armor_upgrade_desc:0 "Self-sealing fuel tanks and armor plates improve survivability."
+ ACTUAL_EQUIPMENT_HEADER:0 "\n\nEquipment:\n"
+ ACTUAL_EQUIPMENT_ENTRY:0 " - $NUM|Y0$ of $NAME|Y$"
+ ACTUAL_EQUIPMENT_ENTRY_STRING:0 " - $NUM|Y$ of $NAME|Y$"
+ ACTUAL_EQUIPMENT_ENTRY_PERCENT:0 " - $NUM|Y0%$ from their production of $NAME|Y$"
+ REQUESTED_REINFORCEMENT_DELIVERING_TO:0 "\nDelivering to $UNIT|Y$ ($PROG|G%$):"
+ REQUESTED_REINFORCEMENT_DELIVERING_TO_BLOCKED:1 "\nDelivering to $UNIT|Y$ ($PROG|G%$ §RBlocked: no supply from capital§! ):"
+ REQUESTED_REINFORCEMENT_DELIVERING_TO_ENTRY:0 "\n    $NUM|Y0$ of $EQ|Y$"
+ REQUESTED_REINFORCEMENT_DELIVERING_TO_MORE_ENTRIES:1 "\nAnd $COUNT|H$ requests more..."
+ REQUESTED_REINFORCEMENT_HEADER:0 "Reinforcement requests:"
+ UPGRADE_REINFORCEMENT_HEADER:0 "Upgrade requests:"
+ TIMED_ACTIVITY_HEADER:0 "Activity request:"
+ REQUESTED_REINFORCEMENT_COLLECTING:0 " - Waiting for equipment to be §Hproduced§!:"
+ REQUESTED_REINFORCEMENT_DELIVERY:0 " - Waiting for equipment to be §Hdelivered§! ($PROG|H%$):"
+ REQUESTED_REINFORCEMENT_COLLECTING_BLOCKED:0 " - §RReinforcement blocked: no supply from capital§!"
+ REQUESTED_REINFORCEMENT_COLLECTING_AND_DELIVERY:0 " - Waiting for equipment to be §Hproduced§! and §Hdelivered§!:"
+ REQUESTED_REINFORCEMENT_DELIVERY_NO_PROGRESS:0 " - Waiting for equipment to be §Hdelivered§!:"
+ REQUESTED_REINFORCEMENT_COLLECTING_ENTRY:0 "   - $NUM|Y0$/$MAX|Y0$ of $NAME|Y$"
+ REQUESTED_REINFORCEMENT_DELIVERY_ENTRY:0 "   - $NUM|Y0$ of $NAME|Y$"
+ REQUESTED_TIMED_ACTIVITY_COLLECTING_ENTRY:0 "   - $NUM|Y0$/$MAX|Y0$ of $NAME|Y$"
+ REQUESTED_MANPOWER_DETAILS:0 "Next $NUM|Y$ of manpower will arrive in $HR|Y$ hours.\nFull manpower reinforcement roughly in $D|Y$ days."
+ NOT_ENOUGH_MANPOWER_TO_REINFORCE:0 "Not enough manpower to reinforce."
+ MANPOWER_REINFORCEMENT_NOT_POSSIBLE:0 "§RManpower reinforcement is not possible at the current location.§!"
+ ARCHETYPE_DESC_ENTRY:0 "    - $COUNT|0$ $NAME|H$"
+ OUTDATED_EQ:1 "Show §Houtdated equipment§!"
+ guided_missile_equipment:0 "Guided Missile"
+ guided_missile_equipment_1:0 "Basic Guided Missile"
+ guided_missile_equipment_1_short:0 "Guided Missile I"
+ guided_missile_equipment_1_desc:0 "Unmanned flying bomb"
+ guided_missile_equipment_2:0 "Improved Guided Missile"
+ guided_missile_equipment_2_short:0 "Guided Missile II"
+ guided_missile_equipment_2_desc:0 "Better unmanned flying bomb"
+ guided_missile_equipment_3:0 "Advanced Guided Missile"
+ guided_missile_equipment_3_short:0 "Guided Missile III"
+ guided_missile_equipment_3_desc:0 "Best unmanned flying bomb"
+ ballistic_missile: "Ballistic Missile"
+ ballistic_missile_equipment: "Ballistic Missile"
+ ballistic_missile_equipment_short: "Ballistic Missile"
+ ballistic_missile_equipment_desc: "An unmanned ballistic missile for strategic bombing"
+ ballistic_missile_equipment_1: "Basic Ballistic Missile"
+ ballistic_missile_equipment_1_short: "Ballistic Missile I"
+ ballistic_missile_equipment_1_desc: "An unmanned ballistic missile for strategic bombing"
+ ballistic_missile_equipment_2: "Medium Range Ballistic Missile"
+ ballistic_missile_equipment_2_short: "MRBM"
+ ballistic_missile_equipment_2_desc: "An improved unmanned ballistic missile for strategic bombing"
+ ballistic_missile_equipment_3: "Intercontinental Ballistic Missile"
+ ballistic_missile_equipment_3_short: "ICBM"
+ ballistic_missile_equipment_3_desc: "A long range unmanned ballistic missile for strategic bombing"
+
+
+ nuclear_missile: "Nuclear Missile"
+ nuclear_missile_equipment: "Nuclear Ballistic Missile"
+ nuclear_missile_equipment_1: "Basic Nuclear Medium Range Missile"
+ nuclear_missile_equipment_1_short: "Nuclear Missile I"
+ nuclear_missile_equipment_1_desc: "A medium range ballistic missile capable of carrying a nuclear warhead"
+ nuclear_missile_equipment_2: "Intercontinental Ballistic Missile"
+ nuclear_missile_equipment_2_short: "ICBM"
+ nuclear_missile_equipment_2_desc: "A long range ballistic missile capable of carrying a nuclear warhead"
+ thermonuclear_bombs: "Thermonuclear Bombs"
+
+ sam_missile: "Surface-to-Air Missile"
+ sam_missile_equipment: "Surface-to-Air Missile"
+ sam_missile_equipment_short: "SAM"
+ sam_missile_equipment_desc: "A rocket intended to quickly climb to reach enemy bombers, and explode in their close proximity."
+ sam_missile_equipment_1: "Surface-to-Air Missile I"
+ sam_missile_equipment_1_short: "SAM I"
+
  EQUIPMENT_DESCRIPTION: "$NAME$"
+ EQUIPMENT_DESCRIPTION_WITH_DESIGNER: "$DESIGNER$ $NAME$"
+
+
+  ###SPECIAL PROJECTS - armopred engineers
+ armored_support_vehicle: "Armored Support Vehicle"
+ armored_support_vehicle_desc: "These versatile vehicles provide essential battlefield support and mobility under armored protection." 
+ armored_support_vehicle_1: "Armored Support Vehicle"
+
+ motorbike_equipment: "Military Motorcycle"
+ motorbike_equipment_desc: "Fast and versatile, military motorbikes are often equipped with sidecars and mounted machine guns to serve as reconnaissance, communication and rapid-response units."
+ motorbike_equipment_1: "Military Motorcycle"
+
+ light_tank_land_cruiser_equipment: "Light Land Cruiser"
+
+ super_heavy_artillery_equipment: "Super-Heavy Howitzer"
+ super_heavy_artillery_equipment_short: "SH. Howitzer"
+ super_heavy_artillery_equipment_desc: "$sp_land_self_propelled_super_heavy_howitzer_desc$"
+ super_heavy_artillery_equipment_1: "Super-Heavy Howitzer"
+ super_heavy_artillery_equipment_1_short: "SH. Howitzer"
+ super_heavy_artillery_equipment_1_desc: "$sp_land_self_propelled_super_heavy_howitzer_desc$"
+
+ self_propelled_super_heavy_artillery_equipment: "Self-Propelled Super-Heavy Howitzer"
+ self_propelled_super_heavy_artillery_equipment_short: "SP. SH. Howitzer"
+ self_propelled_super_heavy_artillery_equipment_desc: "$sp_land_super_heavy_howitzer_desc$"
+ self_propelled_super_heavy_artillery_equipment_1: "Self-Propelled Super-Heavy Howitzer"
+ self_propelled_super_heavy_artillery_equipment_1_short: "SP. SH. Howitzer"
+ self_propelled_super_heavy_artillery_equipment_1_desc: "$sp_land_super_heavy_howitzer_desc$"
+
+ super_heavy_railway_gun_equipment: "Super-Heavy Railway Gun"
+ super_heavy_railway_gun_equipment_short: "SH. Railway Gun"
+ super_heavy_railway_gun_equipment_desc: "A colossal weapon of unmatched power and precision, which will stand as a testament to relentless pursuit of military superiority of our country."
+ super_heavy_railway_gun_equipment_1: "Super-Heavy Railway Gun"
+ super_heavy_railway_gun_equipment_1_short: "SH. Railway Gun"
+ super_heavy_railway_gun_equipment_1_desc: "A colossal weapon of unmatched power and precision, which will stand as a testament to relentless pursuit of military superiority of our country."
+
+ explosive_ammo_equipment: "$mega_gun_emplacement$"
+ explosive_ammo_equipment_short: "$mega_gun_emplacement$"
+ explosive_ammo_equipment_desc: "A high-explosive projectile that can be fired from a Large Caliber Multi-Charge Gun, capable of reaching targets at very long range."
+ explosive_ammo_equipment_1: "$mega_gun_emplacement$"
+ explosive_ammo_equipment_1_short: "$mega_gun_emplacement$"
+ explosive_ammo_equipment_1_desc: "A high-explosive projectile that can be fired from a Large Caliber Multi-Charge Gun, capable of reaching targets at very long range."
+
+ land_cruiser_equipment: "Land Cruiser"
+ land_cruiser_equipment_desc: "$land_cruiser_chassis_desc$"
+ land_cruiser_equipment_1: "Land Cruiser"
+ land_cruiser_equipment_1_short: "Land Cruiser"
+ land_cruiser_equipment_1_desc: "$land_cruiser_chassis_desc$"
+
+ helicopter_equipment: "Helicopter"
+ helicopter_equipment_short: "Helicopter"
+ helicopter_equipment_desc: "A flying craft that relies on rapidly spinning rotors rather than wings and forward momentum. This means it can hover in place, and has more control over vertical changes in height."
+ helicopter_equipment_1: "Helicopter"
+ helicopter_equipment_1_short: "Helicopter"
+ helicopter_equipment_1_desc: "A flying craft that relies on rapidly spinning rotors rather than wings and forward momentum. This means it can hover in place, and has more control over vertical changes in height."
+
+ 
+ strat_bomber_intercontinental_equipment: "Intercontinental Bomber"
+ strat_bomber_intercontinental_equipment_short: "ITC Bomber"
+ strat_bomber_intercontinental_equipment_desc: "A giant aircraft specifically designed for ultra-long range missions, intended to enable strategic bombing across contimemts."
+ strat_bomber_intercontinental_equipment_1: "Intercontinental Bomber"
+ strat_bomber_intercontinental_equipment_1_short: "ITC Bomber"
+ strat_bomber_intercontinental_equipment_1_desc: "A giant aircraft specifically designed for ultra-long range missions, intended to enable strategic bombing across contimemts."
+
+ mothership_equipment: "Mothership Aircraft"
+ mothership_equipment_short: "Mothership Aircraft"
+ mothership_equipment_desc: "A very large plane that carries several fighter planes into combat, allowing for further reach than would normally be possible. The carrier of the sky."
+ mothership_equipment_0:  "Mothership Aircraft"
+ mothership_equipment_0_short: "Mothership Aircraft"
+ mothership_equipment_0_desc: "A very large plane that carries several fighter planes into combat, allowing for further reach than would normally be possible. The carrier of the sky."
