i <3 paradox interactive :heart_eyes:
thank you johan, i forgive you for all your prior mistakes and errors

--- a/localisation/english/PB_Super_Technologies_l_english.yml
+++ b/localisation/english/PB_Super_Technologies_l_english.yml
@@ -2,7 +2,7 @@
   supertech_top_title: "§CSUPERTECHNOLOGY UNLOCKED§!"
   supertechs_folder: "Supertechnologies"
   supertechs_folder_desc: "Supertechnologies Description."
-  fire_supertech_tt: "Unlocks the §Y[?supertech_temp.GetTokenLocalizedKey]§! §CSupertechnology§!."
+  fire_supertech_tt: "Unlocks the §Y[get_supertech_title]§! §CSupertechnology§!."
   supertech_available_tt: "Supertechnologies can only be researched under §Rspecial circumstances§!."
 
   ### SUPERTECHS
