--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -49,20 +49,20 @@ Culture_Conversion: "Culture Conversion/Acceptance"
 ## -------- Culture Map Mode -------- ##
 
 culture_map_mode: "Culture Map"
-culture_map_mode_tooltip: "The majority culture of this state is §Y[?FROM.culture_token.GetTokenLocalizedKey]§!"
-culture_map_mode_tooltip_delayed: ""
+culture_map_mode_tooltip: "The majority culture of this state is §Y[FROM.get_state_culture_name]§!"
+culture_map_mode_tooltip_delayed: "[FROM.get_state_culture_desc]"
 
 ## -------- Scripted Effect Tooltips -------- ##
-PB_Cultures_change_culture_of_state_tt: "Convert the culture of §Y[THIS.GetName]§! from §Y[?culture_token.GetTokenLocalizedKey]§! to §Y[?temp_culture.GetTokenLocalizedKey]§!."
-PB_Cultures_add_accepted_culture_tt: "Adds §Y[?temp_culture.GetTokenLocalizedKey]§! as an accepted culture of §Y[THIS.GetNameWithFlag]§!."
-PB_Cultures_remove_accepted_culture_tt: "Removes §Y[?temp_culture.GetTokenLocalizedKey]§! as an accepted culture of §Y[THIS.GetNameWithFlag]§!."
-PB_Cultures_set_main_culture_tt: "Sets §Y[?temp_culture.GetTokenLocalizedKey]§! as the main culture of §Y[THIS.GetNameWithFlag]§!."
+PB_Cultures_change_culture_of_state_tt: "Convert the culture of §Y[THIS.GetName]§! from §Y[get_state_culture_name]§! to §Y[get_culture_name]§!."
+PB_Cultures_add_accepted_culture_tt: "Adds §Y[get_culture_name]§! as an accepted culture of §Y[THIS.GetNameWithFlag]§!."
+PB_Cultures_remove_accepted_culture_tt: "Removes §Y[get_culture_name]§! as an accepted culture of §Y[THIS.GetNameWithFlag]§!."
+PB_Cultures_set_main_culture_tt: "Sets §Y[get_culture_name]§! as the main culture of §Y[THIS.GetNameWithFlag]§!."
 
 ## -------- Simple View -------- ##
-PB_Culture_Expanded_Lore_tt: "This state's majority culture is: §Y[?culture_token.GetTokenLocalizedKey]§!"
-PB_Culture_Expanded_Lore_tt_delayed: "[!fetch_culture_description]"
-PB_Culture_Pol_Expanded_Lore_tt: "[?culture_v.GetTokenLocalizedKey][PB_Main_or_Accepted]"
-PB_Culture_Pol_Expanded_Lore_tt_delayed: "[!fetch_culture_pol_description]"
+PB_Culture_Expanded_Lore_tt: "This state's majority culture is: §Y[get_state_culture_name]§!"
+PB_Culture_Expanded_Lore_tt_delayed: "[get_state_culture_desc]"
+PB_Culture_Pol_Expanded_Lore_tt: "[get_pol_culture_name][PB_Main_or_Accepted]"
+PB_Culture_Pol_Expanded_Lore_tt_delayed: "[get_pol_culture_desc]"
 
 ## -------- Other Tooltips -------- ##
 
