focus filter icons + other things

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -12,7 +12,9 @@
   #TECH/SUPPORT COMPANIES
   ##########################
   black_hundred:0 "Black Hundredists"
+  motorized_black_hundred:0 "Motorized Black Hundredists"
   tech_black_hundred:0 "Black Hundredist Security"
+  tech_motorized_black_hundred:0 "Motorized Black Hundredist Security"
   winter_logistics_support:0 "Winter Logistics Company"
   winter_logistics_support_tech:0 "Winter Logistics Tech"
   improved_aug_units:0 "Improved Augemented Units"
