--- a/localisation/english/unit_l_english.yml
+++ b/localisation/english/unit_l_english.yml
@@ -717,6 +717,8 @@
  helicopter_field_hospital_desc: "Attention all personel! Incoming chappers with wounded! Med-Evac helicopters are able to get casualites off the battlefield far more quickly than a regular ambulance."
  helicopter_brigade: "Helicopter Brigade"
  helicopter_brigade_desc: "General purpose helicopter support brigade, able to provide flexible mobile assistance in a number of different areas."
+ attack_helicopter_brigade: "Attack Helicopter Brigade"
+ attack_helicopter_brigade_desc: "Helicopter support brigade, focused on supporting ground units by attacking targets from air."
 
 
  super_heavy_artillery: "Super-Heavy Artillery"
