some decisions for UK

--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -477,6 +477,25 @@
   PB_AMERICAN_Carrier_tt:0 "\n§RThe American Carrier Force will launch a suprise attack on Scapa Flow at the outbreak of a conflict§!\n"
   PB_AMERICAN_Sabotage_tt:0 "\n§RAmerican Spies will sabotage ports and fuel stockpiles at the outbreak of a conflict§!\n\n"
 
+  PM_Upgrade_Bermuda:0 "Modernize Bermuda Installations"
+  PM_Upgrade_Bermuda_desc:0 "To increase our respond time to combat unforseen threats in America we should upgrade our military faciliites on the Island of Bermuda."
+  PM_Upgrade_Carribean_Bases:0 "Raise Defenses in the Caribbean"
+  PM_Upgrade_Carribean_Bases_desc:0 "Tensions in the America is getting hot. We need to prepare for threats against our valueable islands in the Caribbean. Without them we will lose to vital fuel sources and the Nicaraguan Canal."
+  PM_Contact_Loyalists_in_America:0 "Contact Loyalists in America"
+  PM_Contact_Loyalists_in_America_desc:0 "There are more loyal subjects to the Crown in America then one might suspect at first glance. We have to find the isolated few and convince them to be ready for the worst case in the future."
+  PM_Secret_Boston_Harbors:0 "Construct Secret Supply Bases"
+  PM_Secret_Boston_Harbors_desc:0 "If a war breaks out its not clear that our planned positions in Boston will hold out immediatly. Incase they are overrun we should create more supply and naval bases on the American Coast under the guise of dockyard investments even if they get suspicious."
+  PM_Raise_Fuel_Reserves:0 "Increase Fuel Reserves"
+  PM_Raise_Fuel_Reserves_desc:0 "Incase of war with America several of our fuel routes might become unusable for a good while. We have to stockpile at home for this possibility."
+  PM_Prepare_Landing_Corps_in_America:0 "Prepare Landing Corps"
+  PM_Prepare_Landing_Corps_in_America_desc:0 "American Troops can not be everywhere in their country at the same time. We have to increase our Royal Marines so that they can create new frontlines and overwhelm America."
+  PM_Operation_007:0 "Operation 007"
+  PM_Operation_007_desc:0 "If America rebels then we already know where their best factories are. Our best agents will be quick to stop production in this facilities for a good while."
+
+  ENG_sabotagg_american_facilites_tt:0 "§RSeveral Military Factories in the Midwest will be disabled at start of the war.§!"
+
+  ENG_contacted_American_Loyalists_tt:0 "§GMore Americans Loyal to the Crowns will join us in a potential war against America§!"
+
   AME_Impending_Imperial_Civil_War_Brotherhood_Restored:0 "Tension Escalating"
   AME_Impending_Imperial_Civil_War_Brotherhood_Restored_desc:0 "We are slowly drifting towards the abyss..."
 
