--- a/localisation/english/OTH_misc_l_english.yml
+++ b/localisation/english/OTH_misc_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
   ### ALERTS RELATED LOCALISATION ###
   # Alerts
-  OTH_alert_tt: "[?current_alert.GetTokenLocalizedKey]"
-  OTH_alert_tt_delayed: "[!fetch_alert_delayed]\n\n§GRight-click to dismiss of this alert§!"
+  OTH_alert_tt: "[get_alert_name]"
+  OTH_alert_tt_delayed: "[get_alert_desc]\n\n§GRight-click to dismiss of this alert§!"
   debug_mode_enabled: "§HDebug Mode Enabled§!"
-  debug_mode_enabled_delayed: "You are currently in §Ydebug§! mode!\nHave fun developing and testing your favorite mod, Over the Horizon!"
+  debug_mode_enabled_delayed: "You are currently in §Ydebug§! mode!\nHave fun developing and testing your favorite mod, Pax Britannica: An Imperial Timeline!"
   pax_tension_test_enabled: "§RImperial Tension Breaking Point!§!"
   pax_tension_test_enabled_delayed: "test test test"
