--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -53,13 +53,13 @@ toggle_culture_map_mode_button_tt: "[get_culture_map_mode_toggle_tt]"
 culture_map_mode_tooltip: "[get_culture_map_mode_toggle_tooltip]"
 culture_map_mode_tooltip_delayed: "[get_culture_map_mode_toggle_tooltip_delayed]"
 culture_map_mode_0_tt: "View states' cultures."
-culture_map_mode_0_tooltip: "The majority culture of [FROM.GetName] is §Y[FROM.get_state_culture_name]§!"
+culture_map_mode_0_tooltip: "The majority culture of [FROM.GetName] is §Y[FROM.get_state_culture_name]§![get_state_culture_debug]"
 culture_map_mode_0_tooltip_delayed: "[FROM.get_state_culture_desc]"
 culture_map_mode_1_tt: "View other countries' main cultures."
-culture_map_mode_1_tooltip: "The main culture of §Y[FROM.controller.GetFlag][FROM.controller.GetNameDef]§! is §Y[FROM.controller.get_main_culture_name]§!"
+culture_map_mode_1_tooltip: "The main culture of §Y[FROM.controller.GetFlag][FROM.controller.GetNameDef]§! is §Y[FROM.controller.get_main_culture_name]§![FROM.controller.get_main_culture_debug]"
 culture_map_mode_1_tooltip_delayed: "[FROM.controller.get_main_culture_desc]"
 culture_map_mode_2_tt: "View our accepted states and cultures."
-culture_map_mode_2_tooltip: "The majority culture of [FROM.GetName], §Y[FROM.get_state_culture_name]§!, is[get_culture_map_mode_acceptance_status] accepted in [THIS.GetAdjective] society."
+culture_map_mode_2_tooltip: "The majority culture of [FROM.GetName], §Y[FROM.get_state_culture_name]§!, is[get_culture_map_mode_acceptance_status] accepted in [THIS.GetAdjective] society.[FROM.get_state_culture_debug]"
 culture_map_mode_2_tooltip_delayed: ""
 
 ## -------- Scripted Effect Tooltips -------- ##
@@ -69,15 +69,22 @@ PB_Cultures_remove_accepted_culture_tt: "Remove §Y[get_culture_name]§! as an a
 PB_Cultures_set_main_culture_tt: "Set §Y[get_culture_name]§! as the main culture of §Y[THIS.GetNameWithFlag]§!."
 
 ## -------- Simple View -------- ##
-PB_Culture_Expanded_Lore_tt: "This state's majority culture is: §Y[get_state_culture_name]§!"
+PB_Culture_Expanded_Lore_tt: "This state's majority culture is: §Y[get_state_culture_name]§![get_state_culture_debug]"
 PB_Culture_Expanded_Lore_tt_delayed: "[get_state_culture_desc]"
-PB_Culture_Pol_Expanded_Lore_tt: "[get_pol_culture_name] [PB_Main_or_Accepted]"
+PB_Culture_Pol_Expanded_Lore_tt: "[get_pol_culture_name] [PB_Main_or_Accepted][get_pol_culture_debug]"
 PB_Culture_Pol_Expanded_Lore_tt_delayed: "[get_pol_culture_desc]"
+
+## -------- Debug -------- ##
+null_culture: "§RERROR§!"
+null_culture_desc: "Check your error.log and game.log to help with debugging."
+state_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_state_culture_name]§!\nInternal Token: §Y[?culture_token?token:null_culture.GetTokenKey]§!\nToken Index: §Y[?culture_token?token:null_culture]§!"
+pol_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_pol_culture_name]§!\nInternal Token: §Y[?culture_v?token:null_culture.GetTokenKey]§!\nToken Index: §Y[?culture_v?token:null_culture]§!"
+main_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_main_culture_name]§!\nInternal Token: §Y[?PB_main_culture?token:null_culture.GetTokenKey]§!\nToken Index: §Y[?PB_main_culture?token:null_culture]§!"
 
 ## -------- Other Tooltips -------- ##
 
 PB_Culture_Main_tt: "§GAccepted Cultures§!"
-PB_Culture_Main_tt_delayed: "Accepted Cultures are cultures that incur no state penalty, whereas foreign cultures will give their respective state a small debuff alongside any non-core debuffs. Although rare there may be instances when a core state still contains a foreign culture, if this is the case then the state debuff will still apply. The proccess of converting or accepting a culture is done through the state GUI, there may also be instances where focus, decision, or event effects will change the culture of a state.\n\nStates that have an accepted culture in them cannot be converted. The convert/acceptance process is also irreversible so do so wisely.\n\nCheck your §YMinority Rights§! political policy to see what your §gMonthly§! conversion/acceptance rate is.\n\nYou can only convert/accept §P10§! cultures at one given time.\n\nYour main culture will also grant modifiers whose strength is relative to your nation's homogeneity; §Rthe more homogenous the nation, the stronger the bonuses...§!\nModifiers from our current main culture (§Y[get_main_culture_name]§!):[print_main_culture_modifiers]"
+PB_Culture_Main_tt_delayed: "Accepted Cultures are cultures that incur no state penalty, whereas foreign cultures will give their respective state a small debuff alongside any non-core debuffs. Although rare there may be instances when a core state still contains a foreign culture, if this is the case then the state debuff will still apply. The proccess of converting or accepting a culture is done through the state GUI, there may also be instances where focus, decision, or event effects will change the culture of a state.\n\nStates that have an accepted culture in them cannot be converted. The convert/acceptance process is also irreversible so do so wisely.\n\nCheck your §YMinority Rights§! political policy to see what your §gMonthly§! conversion/acceptance rate is.\n\nYou can only convert/accept §P10§! cultures at one given time.\n\nYour main culture will also grant modifiers whose strength is relative to your nation's homogeneity; §Rthe more homogenous the nation, the stronger the bonuses...§!\nModifiers from our current main culture (§Y[get_main_culture_name]§!):[print_main_culture_modifiers][get_main_culture_debug]"
 PB_culture_map_mode_not_accepted: " §RNOT§!"
 PB_Culture_Main_Culture_tt: "is [ROOT.GetNameDef]'s §Cmain culture§!"
 PB_Culture_Accepted_Culture_tt: "is considered an §Gaccepted culture§! in [ROOT.GetNameDef]."
