small culture stuff

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -113,7 +113,7 @@ PB_main_culture_modifiers_saxon: "$PB_main_culture_modifiers_culture$ (§Y$saxon
 PB_main_culture_modifiers_south_german: "$PB_main_culture_modifiers_culture$ (§Y$south_german$§!)"
 PB_main_culture_modifiers_swiss: "$PB_main_culture_modifiers_culture$ (§Y$swiss$§!)"
 PB_main_culture_modifiers_austrian: "$PB_main_culture_modifiers_culture$ (§Y$austrian$§!)"
-PB_main_culture_modifiers_studenten: "$PB_main_culture_modifiers_culture$ (§Y$studenten$§!)"
+PB_main_culture_modifiers_sudeten: "$PB_main_culture_modifiers_culture$ (§Y$sudeten$§!)"
 PB_main_culture_modifiers_bohemian: "$PB_main_culture_modifiers_culture$ (§Y$bohemian$§!)"
 PB_main_culture_modifiers_silesian: "$PB_main_culture_modifiers_culture$ (§Y$silesian$§!)"
 PB_main_culture_modifiers_sami: "$PB_main_culture_modifiers_culture$ (§Y$sami$§!)"
