GUI and Name things

--- a/localisation/english/PB_units_l_english.yml
+++ b/localisation/english/PB_units_l_english.yml
@@ -76,3 +76,10 @@
  attack_helicopter_brigade:0 "Attack Helicopter Brigade"
  attack_helicopter_brigade_desc:0 "Helicopter support brigade, focused on supporting ground units by attacking targets from air."
 
+
+### MISC ###
+# FILTERS #
+ AIR_OVERVIEW_CATEGORY_9:0 "We have $COUNT|H$ §HHelicopters§! in our airforces:"
+ AIR_OVERVIEW_CATEGORY_REGULAR_9:0 "$COUNT|H$ are §HHelicopters§!"
+ TARGET_HAS_CATEGORY_9:0 "$COUNTRY|H$ has $COUNT|H$ §HHelicopters§!."
+
