--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1,19 +1,22 @@
 ﻿l_english:
  STATE_1:0 "Corsica"
- STATE_2:0 "Latium"
+ STATE_2:0 "Lazio"
  STATE_3:0 "Switzerland"
- STATE_4:0 "Lower Austria"
+ STATE_4:0 "Niederösterreich"
  STATE_5:0 "Ostpreussen"
  STATE_6:0 "Vlaanderen"
+ FRA_STATE_6:0 "Flandre"
  STATE_7:0 "Holland"
- STATE_8:0 "Luxembourg"
+ FRA_STATE_7:0 "Hollande"
+ STATE_8:0 "Luxemburg"
+ FRA_STATE_8:0 "Luxembourg"
  STATE_9:0 "Bohemia"
  STATE_10:0 "Warszawa"
  STATE_11:0 "Kovno"
  STATE_12:0 "Liflyandiya"
  STATE_13:0 "Garrien"
- STATE_14:0 "Brittany"
- STATE_15:0 "Normandy"
+ STATE_14:0 "Bretagne"
+ STATE_15:0 "Normandie"
  STATE_16:0 "Ile de France"
  STATE_17:0 "Lorraine"
  STATE_18:0 "Champagne"
@@ -26,7 +29,8 @@
  STATE_25:0 "Limousin"
  STATE_26:0 "Auvergne"
  STATE_27:0 "Bourgogne"
- STATE_28:0 "Alsace"
+ STATE_28:0 "Elsass-Lothringen"
+ FRA_STATE_28:0 "Alsace-Lorraine"
  STATE_29:0 "Pas de Calais"
  STATE_30:0 "Loire"
  STATE_31:0 "Roussillon"
@@ -34,10 +38,14 @@
  STATE_33:0 "Centre-Sud"
  STATE_34:0 "Wallonie"
  STATE_35:0 "Brabant"
+ FRA_STATE_35:0 "Nord Flandre"
  STATE_36:0 "Friesland"
+ FRA_STATE_36:0 "Frise"
  STATE_37:0 "Sjaelland"
  STATE_38:0 "Norrland"
- STATE_39:0 "South Tyrol"
+ STATE_39:0 "Süd Tirol"
+ IST_STATE_39:0 "Alto Aldige"
+ ITA_STATE_39:0 "Alto Aldige"
  STATE_40:0 "Altai"
  STATE_41:0 "Madrid"
  STATE_42:0 "Moselland"
@@ -49,7 +57,7 @@
  STATE_48:0 "Sofia"
  STATE_49:0 "Osman"
  STATE_50:0 "Württemberg"
- STATE_51:0 "East-Rhineland"
+ STATE_51:0 "Ost-Rheinland"
  STATE_52:0 "Oberbayern"
  STATE_53:0 "Niederbayern"
  STATE_54:0 "Franken"
@@ -112,8 +120,8 @@
  STATE_111:0 "Uusimaa"
  STATE_112:0 "Lisbon"
  STATE_113:0 "Leinster"
- STATE_114:0 "Sardinia"
- STATE_115:0 "Sicily"
+ STATE_114:0 "Sardegna"
+ STATE_115:0 "Sicilia"
  STATE_116:0 "Malta"
  STATE_117:0 "Campania"
  STATE_118:0 "Gibraltar"
@@ -150,17 +158,17 @@
  STATE_149:0 "Pohjanmaa"
  STATE_150:0 "Savo"
  STATE_151:0 "Eastern Switzerland"
- STATE_152:0 "Upper Austria"
- STATE_153:0 "Tyrol"
+ STATE_152:0 "Oberösterreich"
+ STATE_153:0 "Tirol"
  STATE_154:0 "Alföld"
  STATE_155:0 "Transdanubia"
  STATE_156:0 "Calabria"
- STATE_157:0 "Abruzzo"
- STATE_158:0 "Piedmont"
- STATE_159:0 "Lombardy"
+ STATE_157:0 "Marche"
+ STATE_158:0 "Piemonte"
+ STATE_159:0 "Lombardia"
  STATE_160:0 "Veneto"
  STATE_161:0 "Romagna"
- STATE_162:0 "Tuscany"
+ STATE_162:0 "Toscana"
  STATE_163:0 "Kosovo"
  STATE_164:0 "Dodecanese"
  STATE_165:0 "Catalonia"
@@ -734,7 +742,9 @@
  STATE_733:0 "Andaman"
  STATE_734:0 "Nendo"
  STATE_735:0 "Savoy"
- STATE_736:0 "Istria"
+ STATE_736:0 "Istrien"
+ IST_STATE_736:0 "Istria"
+ ITA_STATE_736:0 "Istria"
  STATE_737:0 "Bismarck"
  STATE_738:0 "Aru Islands"
  STATE_739:0 "Haida Gwaii"
@@ -829,9 +839,11 @@
  STATE_828:0 "Acrean Amazonas"
  STATE_829:0 "Granadan Amazonas"
  STATE_830:0 "Goias"
- STATE_831:0 "Nice"
- STATE_832:0 "Upper Savoy"
- STATE_833:0 "Southern Abruzzo"
+ STATE_831:0 "Nizza"
+ FRA_STATE_831:0 "Nice"
+ STATE_832:0 "Grande Aosta"
+ FRA_STATE_832:0 "Haute-Savoie"
+ STATE_833:0 "Abruzzo"
  STATE_834:0 "Parma"
  STATE_835:0 "Modena"
  STATE_836:0 "New Virginia"
@@ -907,13 +919,15 @@
  STATE_906:0 "Ti'tsa-pa"
  STATE_907:0 "West Rio Grande"
  STATE_908:0 "East Iturbides"
- STATE_909:0 "West-Rhineland"
+ STATE_909:0 "West-Rheinland"
  STATE_910:0 "Zeeuws-Vlaanderen"
+ FRA_STATE_910:0 "Zélande-Française"
  STATE_911:0 "Rotterdam-Zeeland"
+ FRA_STATE_911:0 "Rhin-Zélande"
  STATE_912:0 "Brunei"
  STATE_913:0 "Andorra"
  STATE_914:0 "Monaco"
- STATE_915:0 "Vatican City"
+ STATE_915:0 "Vaticano"
  STATE_916:0 "Singapore"
  STATE_917:0 "Hamburg"
  STATE_918:0 "Borkou"
@@ -922,6 +936,8 @@
  STATE_921:0 "Orol"
  STATE_922:0 "South Carnegia"
  STATE_923:0 "Friaul"
+ ITA_STATE_923:0 "Friuli"
+ IST_STATE_923:0 "Friuli"
  STATE_924:0 "Néma"
  STATE_925:0 "Bamako"
  STATE_926:0 "Selibaby"
