flavor land and airwings names

--- a/localisation/english/PB_focus_filters_l_english.yml
+++ b/localisation/english/PB_focus_filters_l_english.yml
@@ -6,3 +6,7 @@
  FOCUS_FILTER_FOREIGN_POLICY: "Foreign Policy"
  FOCUS_FILTER_OKHRANA: "Okhrana"
  FOCUS_FILTER_AREA_ZERO: "Area Zero"
+ FOCUS_FILTER_EIEC: "EIEC"
+ FOCUS_FILTER_LOBBYISTS: "Lobbyists"
+ FOCUS_FILTER_FREEDMEN: "Freedmen"
+ FOCUS_FILTER_SOUTHERNERS: "Southerners"
