russian post war tree works pt.1

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -23,6 +23,7 @@ PB_NI_Revolution:0 "Revolution"
 PB_NI_British_Exceptionalism:0 "British Exceptionalism"
 PB_NI_German_Efficiency:0 "German Efficiency"
 PB_NI_Russian_Stoicism:0 "Russian Stoicism"
+PB_NI_Pax_Russica:0 "Pax Russica"
 PB_NI_French_Revanchism:0 "French Revanchism"
 PB_NI_Japanese_Militarism:0 "Japanese Militarism"
 PB_NI_American_Idealism:0 "American Idealism"
