--- a/localisation/english/modifiers_l_english.yml
+++ b/localisation/english/modifiers_l_english.yml
@@ -180,8 +180,8 @@
  infantry_weapons_research:3 "£GFX_research_icon  Weapons and Equipment Research Speed"
  motorized_equipment_research:2 "£GFX_research_icon  Motorization Research Speed"
  naval_equipment_research:2 "£GFX_research_icon  Naval Research Speed"
- naval_armor_research:0 "Naval Armor Schemes Research Speed"
- naval_artillery_research:0 "Naval Artillery Research Speed"
+ naval_armor_research:0 "£GFX_research_icon  Naval Armor Schemes Research Speed"
+ naval_artillery_research:0 "£GFX_research_icon  Naval Artillery Research Speed"
  ship_modules_tech_research:0 "£GFX_research_icon  Ship Modules Research Speed"
  bb_tech_research:0 "£GFX_research_icon Battleship Research Speed"
  shbb_tech_research:0 "£GFX_research_icon  Superheavy Battleship Research Speed"
@@ -195,7 +195,7 @@
  rocketry_research:2 "£GFX_research_icon Rocket Research Speed"
  nuclear_research:2 "£GFX_research_icon  Nuclear Research Speed"
  industry_research:2 "£GFX_research_icon  Industrial Research Speed"
- construction_tech_research: "Construction Technology Research Speed"
+ construction_tech_research: "£GFX_research_icon  Construction Technology Research Speed"
 excavation_tech_research: "£GFX_research_icon  Excavation Technology Research Speed"
  electronics_research:2 "£GFX_research_icon  Electronics Research Speed"
  land_doctrine_research:2 "£GFX_research_icon  Land Doctrine Research Speed"
